# selkokortti

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
selkokortti/: __init__.py  cli.py  data.py
tests/: conftest.py  test_build.py  test_main.py  test_parsing.py
tests/fixtures/data/2025/01/02/: _request.fi.en.json  _response.fi.en.json
