[project]
name = "selkokortti"
version = "0.2.0"
description = "Generate Anki flashcards from Andrew's Selkouutiset Archive (Finnish easy-news)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Andrew Quinn" }]
dependencies = [
    "typer>=0.12",
    "genanki>=0.13",
    "colorlog>=6.8",
    "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://github.com/Selkouutiset-Archive/selkokortti"
Issues = "https://github.com/Selkouutiset-Archive/selkokortti/issues"

[project.scripts]
selkokortti = "selkokortti.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["selkokortti"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]
